--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,37 +1,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@android:color/transparent">
+    android:orientation="vertical">
 
-    <!--<TextView
+	<LinearLayout 
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:orientation="horizontal">
+    <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
+        android:text="SmartWatch Lock Enabled"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ToggleButton
-        android:id="@+id/toggle_device_admin"
+        android:id="@+id/toggleLock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/enable_device_admin"
-        android:textOff="@string/device_admin_disabled"
-        android:textOn="@string/device_admin_enabled" />
-
-    <Button
-        android:id="@+id/button_lock_device"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/lock_device"
-        android:onClick="onClick" />
-
-    <Button
-        android:id="@+id/button_reset_device"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/reset_device"
-        android:onClick="onClick" />-->
-
+        android:textOff="Off"
+        android:textOn="On" />
+	</LinearLayout>
+	
 </LinearLayout>
