--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,14 +3,16 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
-	<LinearLayout 
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:orientation="horizontal">
+	<LinearLayout
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >
+
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="SmartWatch Lock Enabled"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
